# myBasicFemSolver

./: CMakeLists.txt  CMakePresets.json  MyCMakePresets.json  README.md
aux/: GeneralNotes.txt  Notes.txt
aux/doc/: Formalize.aux  Formalize.bcf  Formalize.blg  Formalize.out  Formalize.run.xml  Formalize.tex
data/Mesh/: __MeshFileStructureNodesOrTemplate.txt
data/Mesh/Linear1D/: SimpleBar_linA_linC_3nodes.txt
src/: EXCLUDE_minimalStandalone2DRectangular.hpp  LinAlg.hpp  Main.cpp  MyFem_Array.hpp  MyFem_Array_decl.hpp  MyFem_Array_def.hpp  Timer.cpp  Timer.hpp  Visualization.cpp  Visualization.hpp  VisualizationElements.cpp  VisualizationElements.hpp  old_LinAlg.hpp
src/GeoMesh/: Geo2D_ConvexPolygon.hpp  Geo2D_Utils.hpp  Mesh2D_Mesh.cpp  README  _EXCLUDE_Mesh2D_Mesh.cpp  _EXCLUDE_Mesh2D_Mesh.hpp
src/GlobalDefinitions/: Global.hpp  README  _EXCLUDE_Global.cpp  _EXCLUDE_Global_reduced.hpp
src/Linear1D/: Element_line2.cpp  Element_line2.hpp  Linear1D_Main.cpp  Linear1D_Main.hpp  Linear1D_Manager.cpp  Linear1D_Manager.hpp  _EXCLUDE_Element_line2.cpp
src/Methods/: NumIntegrate.hpp  Polynomial.hpp  README
src/MyFemUtils/: README
src/Problem/: Element_Line2.cpp  Element_Line2.hpp  Element_Tri3.hpp  Linear1D_Manager.cpp  Linear1D_Manager.hpp  Linear2D_Manager.cpp  Linear2D_Manager.hpp  README  _EXCLUDE_ElementBase.hpp  _EXCLUDE_Linear1D_Manager copy.cpp  _EXCLUDE_Linear2D_Manager copy.cpp  _EXCLUDE_Linear2D_Manager.cpp  _EXCLUDE_Linear2D_Manager.hpp
src/Problem/RigidBody/: _EXCLUDE_RadsymRigidBody.hpp  _EXCLUDE_RigidBody2D_Manager.hpp
src/Problem/SolidFem/: Element_Line2.cpp  Element_Line2.hpp  Element_Tri3.hpp  Linear1D_Manager.cpp  Linear1D_Manager.hpp  Linear2D_Manager.cpp  Linear2D_Manager.hpp  _EXCLUDE_Element_Tri3_Dyn.hpp  _EXCLUDE_Linear2D_Manager_examples.cpp
src/Vis/: README  Visualization.hpp  Visualization2D.cpp  Visualization2D.hpp  VisualizationBase.cpp  VisualizationBase.hpp  VisualizationElements.cpp  VisualizationElements.hpp  VisualizationObjects.cpp  VisualizationObjects.hpp  Visualization_SolidFem2D.cpp  Visualization_SolidFem2D.hpp
src/_EXCLUDE_Archived/: PARTIAL_Linear2D_Manager.cpp
src/_EXCLUDE_GeoMesh/: Geo2D_ConvexPolygon.hpp  Geo2D_Utils.hpp  _EXCLUDE_Mesh2D_Mesh.cpp  _EXCLUDE_Mesh2D_Mesh.hpp
src/_EXCLUDE_GlobalDefinitions/: Global.hpp  _EXCLUDE_Global.cpp  _EXCLUDE_Global_reduced.hpp
test/: Test_Main.cpp
test/user_test/: UserTest.cpp
